--- a/easy.install/easy.install.nuspec
+++ b/easy.install/easy.install.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>easy.install</id>
     <title>Easy Install</title>
-    <version>0.6.11</version>
+    <version>0.6.11.1</version>
     <authors>Phillip J. Eby</authors>
     <owners>Elliando Dias</owners>
     <summary>Easy Install is a python module (easy_install) bundled with setuptools that lets you automatically 
@@ -15,10 +15,10 @@
     <copyright>Copyright © 1990-2011, Python Software Foundation</copyright>
     <licenseUrl>http://docs.python.org/license.html</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <iconUrl>http://www.d4n13l.com.br/daniel/wp-content/uploads/2009/02/python-logo.png</iconUrl>
-    <dependencies>
-      <dependency id="curl"/>
-    </dependencies>
+    <iconUrl>https://github.com/adorepump/chocolatey-packages/raw/master/easy.install/python-logo.png</iconUrl>
+    <!-- <dependencies>
+      <dependency id=""/>
+    </dependencies> -->
     <releaseNotes></releaseNotes>
   </metadata>
 </package>
