--- a/apache.ant/apache.ant.nuspec
+++ b/apache.ant/apache.ant.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>apache.ant</id>
     <title>Apache Ant</title>
-    <version>1.8.3.1</version>
+    <version>1.8.4</version>
     <authors>Apache Software Foundation</authors>
     <owners>Elliando Dias</owners>
     <summary>Apache Ant is a software tool for automating software build processes</summary>
@@ -18,6 +18,6 @@
       <!-- <dependency id="java" version="" />  -->	  
 	  <dependency id="binRoot"/> 
     </dependencies>
-    <releaseNotes> URL link to version 1.8.3 is now alive </releaseNotes>
+    <releaseNotes></releaseNotes>
   </metadata>
 </package>
