--- a/Quicktime/Quicktime.nuspec
+++ b/Quicktime/Quicktime.nuspec
@@ -3,14 +3,14 @@
   <metadata>
     <id>Quicktime</id>
     <title>Quicktime</title>
-    <version>7.7.1</version>
+    <version>7.7.2</version>
     <authors>Apple</authors>
     <owners>Elliando Dias</owners>
     <summary>Quicktime</summary>
     <description>Quicktime</description>
     <projectUrl>http://support.apple.com/kb/DL837</projectUrl>
-    <tags>Quicktime admin</tags>
-    <copyright>Copyright © 2012 Apple Inc. All rights reserve</copyright>
+    <tags>Quicktime chocolatey admin</tags>
+    <copyright>Copyright © 2012 Apple Inc. All rights reserved</copyright>
     <licenseUrl>http://www.apple.com/legal/terms/site.html</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <iconUrl>http://km.support.apple.com/resources/sites/APPLE/content/live/IMAGES/0/IM28/en_US/Quicktime-165.png</iconUrl>
