--- a/Quicktime/Quicktime.nuspec
+++ b/Quicktime/Quicktime.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>Quicktime</id>
     <title>Quicktime</title>
-    <version>7.7.2</version>
+    <version>7.7.3</version>
     <authors>Apple</authors>
     <owners>Elliando Dias</owners>
     <summary>Quicktime</summary>
@@ -13,7 +13,7 @@
     <copyright>Copyright © 2012 Apple Inc. All rights reserved</copyright>
     <licenseUrl>http://www.apple.com/legal/terms/site.html</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <iconUrl>http://km.support.apple.com/resources/sites/APPLE/content/live/IMAGES/0/IM28/en_US/Quicktime-165.png</iconUrl>
+    <iconUrl>http://icons.iconseeker.com/png/fullsize/quicktime-feat-pink-sparkles/quicktime-24.png</iconUrl>
     <!--<dependencies>
       <dependency id="" version="" />
     </dependencies>-->
