--- a/R.Project/R.Project.nuspec
+++ b/R.Project/R.Project.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>R.Project</id>
     <title>The R Project for Statistical Computing</title>
-    <version>3.0.2</version>
+    <version>3.0.3</version>
     <authors>R Core Team</authors>
     <owners>Elliando Dias</owners>
     <summary>R is a system for statistical computation and graphics. It consists of a language plus a 
@@ -12,7 +12,7 @@
     <description>The R Project for Statistical Computing</description>
     <projectUrl>http://www.r-project.org</projectUrl>
     <tags>statistics</tags>
-    <copyright>Copyright (C) 1989, 1991 Free Software Foundation, Inc</copyright>
+    <copyright>Copyright (C) 1989, 1991-2014 Free Software Foundation, Inc</copyright>
     <licenseUrl>http://www.r-project.org/Licenses/</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <iconUrl>http://cran.cnr.berkeley.edu/Rlogo.jpg</iconUrl>
