--- a/flyway.commandline/flyway.commandline.nuspec
+++ b/flyway.commandline/flyway.commandline.nuspec
@@ -3,20 +3,17 @@
   <metadata>
     <id>flyway.commandline</id>
     <title>Flyway, the agile database migration framework for Java</title>
-    <version>1.6.1</version>
+    <version>3.1</version>
     <authors>flyway Team</authors>
     <owners>Elliando Dias</owners>
     <summary>Flyway  is database-independent library for tracking, managing and applying database changes</summary>
     <description>Flyway  is database-independent library for tracking, managing and applying database changes</description>
-    <projectUrl>http://code.google.com/p/flyway/wiki/CommandLine</projectUrl>
+    <projectUrl>http://flywaydb.org/getstarted/firststeps/commandline.html</projectUrl>
     <tags>flyway database migration</tags>
     <copyright>Copyright (C) 2010-2012</copyright>
     <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <iconUrl>https://github.com/adorepump/chocolatey-packages/raw/master/flyway.commandline/flyway.png</iconUrl>
-    <dependencies>
-      <dependency id="binRoot"/>
-    </dependencies>
     <releaseNotes></releaseNotes>
   </metadata>
 </package>
